# VehicleSystem

./: .dockerignore  CMakeLists.txt  README.md  project_structure.txt
VehicleSystem/x64/Debug/: vc143.idb
VehicleSystem/x64/Debug/VehicleSystem.tlog/: VehicleSystem.lastbuildstate
src/: CMakeLists.txt  ModuleController.h  main.cpp  main.qml  resources.qrc
src/app/: CMakeLists.txt  Main.qml  Main2.qml  main.cpp
src/modules/: CMakeLists.txt
src/modules/Core/: CMakeLists.txt  CoreController.cpp  CoreController.h
src/modules/MainPage/: CMakeLists.txt  Main.qml  resources.qrc
src/modules/MusicPlayer/: CMakeLists.txt  Music.qml  MusicController.cpp  MusicController.h  MusicPlayerView.qml  MusicView.qml  resources.qrc
src/modules/Navigation/: CMakeLists.txt  NavigationController.cpp  NavigationController.h  NavigationView.qml
src/modules/Settings/: CMakeLists.txt  SettingsController.cpp  SettingsController.h  SettingsView.qml
src/modules/VehicleInfo/: CMakeLists.txt  VehicleInfoController.cpp  VehicleInfoController.h  VehicleInfoView.qml
